# mpmt-tooldaq

./: .gitignore  CMakeLists.txt  Makefile  setup.sh  variables
DataModel/: DataModel.h  dma-proxy.h  queue.hpp
UserTools/: Unity.h
UserTools/BoardControl/: BME280.cpp  BME280.h  BoardControl.cpp  BoardControl.h  HVDevice.cpp  HVDevice.h  HVExceptions.h  RCDevice.cpp  RCDevice.h  RCExceptions.h  TLA2024.cpp  TLA2024.h
UserTools/Configuration/: Configuration.cpp  Configuration.h
UserTools/FPGAReadout/: FPGAReadout.cpp  FPGAReadout.h
UserTools/Factory/: Factory.cpp
UserTools/HKMPMT/: HKMPMT.h
UserTools/NetTransmit/: NetTransmit.cpp  NetTransmit.h
UserTools/SlaveRunControl/: SlaveRunControl.cpp  SlaveRunControl.h
configfiles/MPMT/: BoardControl.cfg  Configuration.cfg  FPGAReadout.cfg  SlaveRunControl.cfg  main.cfg  tools.cfg
configfiles/WCTE/: BoardControl.cfg  FPGAReadout.cfg  main.cfg  tools.cfg
include/: README
linked/: CMakeLists.txt
linked/DataModel/: DataModel.h
linked/UserTools/HKMPMT/: HKMPMT.cpp  HKMPMT.h
linked/configfiles/MPMT/: main.cfg  tools.cfg
linked/utils/: build.sh
pyclient/: config.json  slow.py
src/: DataManager.cpp  Logger.cpp  Monitor.cpp  RunControl.cpp  ServiceDiscovery.cpp  SlowControl.cpp  main.cpp
standalone/: CMakeLists.txt  README.md  variables
standalone/include/: RunControl.h
standalone/src/: MPMTDataChunk.cpp  Store.cpp
standalone/utils/: logger.py  monitor.py  slowcontrol.py  slowcontrol_handle_request.py
utils/: colors.py  logger.py  monitor.py  slowcontrol.py  slowcontrol_handle_request.py
